force-app/main/default/objects/ChronarPay_Payment_Type__mdt/ChronarPay_Payment_Type__mdt.object-meta.xml
<CustomObject>
    <label>ChronarPay Payment Type</label>
    <pluralLabel>ChronarPay Payment Types</pluralLabel>
</CustomObject>