force-app/main/default/objects/ChronarPay_Payment_Type__mdt/fields/Is_Overpayment_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Is_Overpayment_Allowed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Overpayment Allowed</label>
    <type>Checkbox</type>
</CustomField>