force-app/main/default/objects/ChronarPay_Payment_Type__mdt/fields/Is_Reason_Not_Required__c.field-meta.xml
<CustomField>
    <fullName>Is_Reason_Not_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Reason Not Required</label>
    <type>Checkbox</type>
</CustomField>