force-app/main/default/objects/ChronarPay_Payment_Type__mdt/fields/Payment_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>Payment_Type_Code__c</fullName>
    <label>Payment Type Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>